--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,18 +1,25 @@
 en:
-  title: "Title"
-  memo: "Memo"
-  author: "Author"
-  picture: "Picture"
-  show: "Show"
-  edit: "Edit"
-  destroy: "Destroy"
-  new_book: "New Book"
-  are_you_sure?: "Are you sure?"
-  back: "Back"
-  editing_book: "edit book"
-  create_new_book: "new book"
-  Book_was_successfully_created: "Book was successfully created."
-  Book_was_successfully_destroyed: "Book was successfully destroyed."
+  book:
+    Book_created: "Book was successfully created."
+    Book_updated: "Book was successfully updated."
+    Book_destroyed: "Book was successfully destroyed."
+  books:
+    index:
+      show: "Show"
+      edit: "Edit"
+      destroy: "Destroy"
+      confirm: "Are you sure?"
+      create_new_book: "new book"
+    edit:
+      editing_book: "edit book"
+      show: "Show"
+      back: "Back"
+    show:
+      edit: "Edit"
+      back: "Back"
+    new:
+      new_book: "New Book"
+      back: "Back"
   activerecord:
     models:
       book: book
