--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,18 +1,25 @@
 ja:
-  title: "タイトル"
-  memo: "メモ"
-  author: "筆者"
-  picture: "写真"
-  show: "表示"
-  edit: "編集"
-  destroy: "削除"
-  new_book: "新規登録"
-  are_you_sure?: "本当によろしいですか？"
-  back: "戻る"
-  editing_book: "本を編集"
-  create_new_book: "本を登録"
-  Book_was_successfully_created: "本の登録に成功いたしました。"
-  Book_was_successfully_destroyed: "本の削除に成功いたしました。"
+  book:
+    Book_created: "本の登録に成功いたしました。"
+    Book_updated: "本の更新に成功いたしました。"
+    Book_destroyed: "本の削除に成功いたしました。"
+  books:
+    index:
+      show: "表示"
+      edit: "編集"
+      destroy: "削除"
+      confirm: "本当によろしいですか？"
+      create_new_book: "本を登録"
+    edit:
+      editing_book: "本を編集"
+      show: "表示"
+      back: "戻る"
+    show:
+      edit: "編集"
+      back: "戻る"
+    new:
+      new_book: "新規登録"
+      back: "戻る"
   activerecord:
     models:
       book: 本
