--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -63,3 +63,7 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+  shared:
+    log_in: Log In
+    sign_up: Sign Up
+    reset_password: Forgot Password?
