--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -2,10 +2,14 @@ ja:
   activerecord:
     models:
       book: 本  #g
-
+      user: ユーザー
     attributes:
       book:
         author: 著者  #g
         memo: メモ  #g
         picture: 画像  #g
         title: 題名  #g
+      user:
+        postal: 郵便番号
+        address: 住所
+        description: 自己紹介
